<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".LoginSignupScreen">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="246dp"
        android:layout_height="234dp"
        android:layout_marginTop="88dp"
        android:contentDescription="@string/surakshamitra_app_logo"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/hindsemibold"
        android:text="@string/marathi_appname"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/hindsemibold"
        android:text="@string/apptagline"
        android:textSize="17sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/createloginBtn"
        android:layout_width="281dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:text="@string/create_login"
        android:textColor="@color/black"
        android:background="@drawable/button_background"
        app:backgroundTint="@color/skyblue"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="281dp"
        android:layout_height="60dp"
        android:layout_marginBottom="56dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:background="@drawable/button_background"
        app:backgroundTint="@color/lightyellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rightsMainLabel"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/hepta"
        android:layout_marginBottom="15dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>