<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/gradient_background">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LoginScreen"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="246dp"
        android:layout_height="234dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/surakshamitra_app_logo"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/hindsemibold"
        android:text="@string/marathi_appname"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginanim"
        android:layout_width="match_parent"
        android:layout_height="370sp"
        android:background="@drawable/fragback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/heptaregular"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.167"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.046" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hepta"
            android:text="Login"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.133"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13" />

        <EditText
            android:id="@+id/loginUserName"
            android:layout_width="320sp"
            android:layout_height="50sp"
            android:background="@drawable/textround"
            android:paddingLeft="15sp"
            android:hint="@string/Username"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.303" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/textround"
            android:paddingLeft="15dp"
            android:hint="Password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginUserName"
            app:layout_constraintVertical_bias="0.075" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="25sp"
            android:layout_height="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.064"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.681" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/heptaregular"
            android:text="Remember Me"
            android:textColor="@color/black"

            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/loginButton2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/checkBox"
            app:layout_constraintTop_toBottomOf="@+id/loginPassword"
            app:layout_constraintVertical_bias="0.961" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/heptaregular"
            android:text="Forget Password ?"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/loginButton2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.637"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.995" />

        <Button
            android:id="@+id/loginButton2"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/button_background"
            android:textAllCaps="false"
            android:fontFamily="@font/hepta"
            android:text="Login"
            android:textSize="15sp"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.549"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginPassword"
            app:layout_constraintVertical_bias="0.48" />

        <TextView
            android:id="@+id/donthaveac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/don_t_have_an_account"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/heptaregular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton2"
            app:layout_constraintVertical_bias="0.058" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    </androidx.fragment.app.FragmentContainerView>-->


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>